@@ -23,16 +23,6 @@
  */
 package com.formkiq.stacks.api.handler;
 
-import static com.formkiq.aws.dynamodb.objects.Objects.throwIfNull;
-import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_CREATED;
-import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_OK;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Date;
-import java.util.List;
-import java.util.stream.Collectors;
 import com.amazonaws.services.lambda.runtime.LambdaLogger;
 import com.formkiq.aws.dynamodb.PaginationMapToken;
 import com.formkiq.aws.dynamodb.PaginationResults;
@@ -51,7 +41,6 @@ import com.formkiq.aws.services.lambda.exceptions.BadException;
 import com.formkiq.aws.services.lambda.exceptions.DocumentNotFoundException;
 import com.formkiq.aws.services.lambda.services.CacheService;
 import com.formkiq.module.lambdaservices.AwsServiceCache;
-import com.formkiq.plugins.tagschema.TagSchemaInterface;
 import com.formkiq.stacks.api.ApiDocumentTagItemResponse;
 import com.formkiq.stacks.api.ApiDocumentTagsItemResponse;
 import com.formkiq.stacks.dynamodb.DocumentService;
@@ -59,6 +48,17 @@ import com.formkiq.stacks.dynamodb.DocumentTagValidatorImpl;
 import com.formkiq.stacks.dynamodb.DocumentTags;
 import com.formkiq.validation.ValidationError;
 import com.formkiq.validation.ValidationException;
+
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import static com.formkiq.aws.dynamodb.objects.Objects.throwIfNull;
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_CREATED;
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_OK;
 
 /** {@link ApiGatewayRequestHandler} for "/documents/{documentId}/tags". */
 public class DocumentTagsRequestHandler
@@ -85,7 +85,7 @@ public class DocumentTagsRequestHandler
 
     String siteId = authorization.getSiteId();
     String documentId = event.getPathParameters().get("documentId");
-    verifyDocument(awsservice, event, siteId, documentId);
+    verifyDocument(awsservice, siteId, documentId);
 
     PaginationResults<DocumentTag> results =
         documentService.findDocumentTags(siteId, documentId, ptoken, limit);
@@ -159,9 +159,9 @@ public class DocumentTagsRequestHandler
     DocumentTags tags = fromBodyToObject(event, DocumentTags.class);
 
     validate(tags);
-    verifyDocument(awsservice, event, siteId, documentId);
+    verifyDocument(awsservice, siteId, documentId);
 
-    updateTagsMetadata(event, authorization, tags);
+    updateTagsMetadata(authorization, tags);
 
     validateTags(tags);
 
@@ -199,14 +199,14 @@ public class DocumentTagsRequestHandler
 
     if (!tagsValid) {
       tags = new DocumentTags();
-      tags.setTags(Arrays.asList(tag));
+      tags.setTags(List.of(tag));
     }
 
-    updateTagsMetadata(event, authorization, tags);
+    updateTagsMetadata(authorization, tags);
     validateTags(tags);
 
     DocumentService documentService = awsservice.getExtension(DocumentService.class);
-    verifyDocument(awsservice, event, siteId, documentId);
+    verifyDocument(awsservice, siteId, documentId);
 
     List<DocumentTag> allTags = new ArrayList<>(tags.getTags());
 
@@ -230,11 +230,11 @@ public class DocumentTagsRequestHandler
 
     validate(tags);
 
-    verifyDocument(awsservice, event, siteId, documentId);
+    verifyDocument(awsservice, siteId, documentId);
 
     DocumentService documentService = awsservice.getExtension(DocumentService.class);
     documentService.deleteDocumentTags(siteId, documentId);
-    updateTagsMetadata(event, authorization, tags);
+    updateTagsMetadata(authorization, tags);
 
     validateTags(tags);
 
@@ -246,13 +246,11 @@ public class DocumentTagsRequestHandler
   /**
    * Update {@link DocumentTags} metadata.
    * 
-   * @param event {@link ApiGatewayRequestEvent}
    * @param authorization {@link ApiAuthorization}
    * @param tags {@link DocumentTags}
    * @return {@link String}
    */
-  private String updateTagsMetadata(final ApiGatewayRequestEvent event,
-      final ApiAuthorization authorization, final DocumentTags tags) {
+  private String updateTagsMetadata(final ApiAuthorization authorization, final DocumentTags tags) {
 
     String userId = authorization.getUsername();
 
@@ -291,9 +289,8 @@ public class DocumentTagsRequestHandler
     }
   }
 
-  private DocumentItem verifyDocument(final AwsServiceCache awsservice,
-      final ApiGatewayRequestEvent event, final String siteId, final String documentId)
-      throws Exception {
+  private DocumentItem verifyDocument(final AwsServiceCache awsservice, final String siteId,
+      final String documentId) throws Exception {
     DocumentService ds = awsservice.getExtension(DocumentService.class);
     DocumentItem item = ds.findDocument(siteId, documentId);
     throwIfNull(item, new DocumentNotFoundException(documentId));
